--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,15 +26,15 @@ jobs:
           python3 -m pip install --upgrade requests
           python3 -m pip install --upgrade bs4
 
-      - name: Promote version
-        run: python3 ./ntk_run.py ${{ github.event.commits[0].message }}
+      - name: Run script
+        run: python3 ./ntk_run.py
 
       - name: commit files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git commit -m "${{ steps.buildPrepare.outputs.commitMessage }}" -a
+          git commit -m "UPDATE" -a
           
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
