--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -3,12 +3,7 @@ name: Update
 on:
   schedule:
     #- cron:  '20/15 * * * *' # every 15 minutes starting 20th minute 20,35,50
-    - cron: '0 * * * *'
-    - cron: '10 * * * *'
-    - cron: '20 * * * *'
-    - cron: '30 * * * *'
-    - cron: '40 * * * *'
-    - cron: '50 * * * *'
+    - cron: '0/10 * * * *'
 
 jobs:
   build:
